versioned_docs/version-3.x/sql-manual/sql-functions/table-valued-functions/frontends_disks.md
---
{
  "title": "FRONTENDS_DISKS",
  "language": "en"
}
---

## Description

The `frontends_disks` table function generates a temporary table that allows you to view the disk information of FE nodes in the current Doris cluster. Its result is essentially the same as the information displayed by the `show frontends disks` statement, but the field types in `frontends_disks()` are more explicit, and you can use the table generated by the TVF for filtering, joining, and other operations.

This function can be used in the `FROM` clause.


## Syntax
```sql
FRONTENDS_DISKS()
```

## Access Control Requirements

| Privilege  | Object | Notes |
| :--------- |:-------|:------|
| SELECT_PRIV | internal.information_schema | All users have permissions to this database by default |


## Return Value

View the returned fields of the frontends_disks() function

```sql
desc function frontends_disks();
```
```text
+------------+------+------+-------+---------+-------+
| Field      | Type | Null | Key   | Default | Extra |
+------------+------+------+-------+---------+-------+
| Name       | text | No   | false | NULL    | NONE  |
| Host       | text | No   | false | NULL    | NONE  |
| DirType    | text | No   | false | NULL    | NONE  |
| Dir        | text | No   | false | NULL    | NONE  |
| Filesystem | text | No   | false | NULL    | NONE  |
| Capacity   | text | No   | false | NULL    | NONE  |
| Used       | text | No   | false | NULL    | NONE  |
| Available  | text | No   | false | NULL    | NONE  |
| UseRate    | text | No   | false | NULL    | NONE  |
| MountOn    | text | No   | false | NULL    | NONE  |
+------------+------+------+-------+---------+-------+
```

The field meanings are as follows:

| Field        | Type    | Explanation                                                                                 |
|--------------|---------|---------------------------------------------------------------------------------------------|
| `Name`       | TEXT    | The unique identifier for the frontend node (FE).                                            |
| `Host`       | TEXT    | The IP address or hostname of the frontend node.                                            |
| `DirType`    | TEXT    | The type of directory (e.g., `meta`, `log`, `audit-log`, `temp`, `deploy`).                  |
| `Dir`        | TEXT    | The path to the directory on the disk for the specified directory type.                      |
| `Filesystem` | TEXT    | The filesystem type.                                           |
| `Capacity`   | TEXT    | The total storage capacity of the disk.                                                      |
| `Used`       | TEXT    | The amount of disk space that has been used.                                                 |
| `Available`  | TEXT    | The amount of disk space that is available for use.                                          |
| `UseRate`    | TEXT    | The percentage of disk space that is used.                                                  |
| `MountOn`    | TEXT    | The mount point of the disk in the file system.                                              |


## example
```sql
select * from frontends_disks();
```
```text
+-----------------------------------------+------------+-----------+-----------------------------------------------------------+--------------+----------+------+-----------+---------+------------+
| Name                                    | Host       | DirType   | Dir                                                       | Filesystem   | Capacity | Used | Available | UseRate | MountOn    |
+-----------------------------------------+------------+-----------+-----------------------------------------------------------+--------------+----------+------+-----------+---------+------------+
| fe_f4642d47_62a2_44a2_b79d_3259050ab9de | 10.x.x.6 | meta      | /mnt/disk2/doris/fe/doris-meta | /dev/nvme1n1 | 3T       | 3T   | 223G      | 94%     | /mnt/disk2                              |
| fe_f4642d47_62a2_44a2_b79d_3259050ab9de | 10.x.x.6 | log       | /mnt/disk2/doris/fe/log        | /dev/nvme1n1 | 3T       | 3T   | 223G      | 94%     | /mnt/disk2                              |
| fe_f4642d47_62a2_44a2_b79d_3259050ab9de | 10.x.x.6 | audit-log | /mnt/disk2/doris/fe/log        | /dev/nvme1n1 | 3T       | 3T   | 223G      | 94%     | /mnt/disk2                              |
| fe_f4642d47_62a2_44a2_b79d_3259050ab9de | 10.x.x.6 | temp      | /mnt/disk2/doris/fe/temp_dir   | /dev/nvme1n1 | 3T       | 3T   | 223G      | 94%     | /mnt/disk2                              |
| fe_f4642d47_62a2_44a2_b79d_3259050ab9de | 10.x.x.6 | deploy    | /mnt/disk2/doris/fe            | /dev/nvme1n1 | 3T       | 3T   | 223G      | 94%     | /mnt/disk2                              |
+-----------------------------------------+------------+-----------+-----------------------------------------------------------+--------------+----------+------+-----------+---------+------------+
```
